err/caelum.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/caelum'...
Compiling './lib/python3.5/site-packages/caelum/forecast.py'...
***   File "./lib/python3.5/site-packages/caelum/forecast.py", line 9
    print "WARNING: forecast.io key not set."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/caelum/g.py'...
***   File "./lib/python3.5/site-packages/caelum/g.py", line 16
    print ', '.join([str(i) for i in b])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caelum/g2.py'...
***   File "./lib/python3.5/site-packages/caelum/g2.py", line 19
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/caelum/g3.py'...
***   File "./lib/python3.5/site-packages/caelum/g3.py", line 18
    print ','.join([str(i) for i in b])
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caelum/noaa.py'...
***   File "./lib/python3.5/site-packages/caelum/noaa.py", line 105
    print herp_derp_interp(PLACE)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/caelum/nsrdb.py'...
***   File "./lib/python3.5/site-packages/caelum/nsrdb.py", line 57
    print "File not found"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/caelum/t.py'...
***   File "./lib/python3.5/site-packages/caelum/t.py", line 20
    print b['station_code'], c, s['station_code'], s['weather_station'], n, d
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/caelum/tools.py'...
***   File "./lib/python3.5/site-packages/caelum/tools.py", line 154
    print eere_station('163120')
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/caelum-0.1.13.9.egg-info'...
Listing './lib/python3.5/site-packages/geopy'...
Listing './lib/python3.5/site-packages/geopy/geocoders'...
Listing './lib/python3.5/site-packages/geopy-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/unit.py'...
***   File "./lib/python3.5/site-packages/tests/unit.py", line 18
    print annual_ghi2
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
